[metadata]
name = swipe
version = 0.0.3
url = https://github.com/thorwhalen/swipe
packages = 
		swipe
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = .
description = There's a bit of an air of mystery around this project...
root_url = https://github.com/thorwhalen
author = Thor Whalen
license = mit
description-file = README.md

