[metadata]
name = swipe
version = 0.0.5
url = https://github.com/thorwhalen/swipe
platforms = any
description_file = README.md
pkg-dir = .
description = Swipe through data once with a comb that will pick up the points you're looking for.
long_description = file:README.md
long_description_content_type = text/markdown
display_name = slink
root_url = https://github.com/thorwhalen
author = Thor Whalen
keywords = 
		data
		search

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

